<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/delete_message"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="10"/>


    <item android:id="@+id/copy_message"
        android:title="@string/copy_message"
        android:icon="@drawable/ic_content_copy_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="10"/>

    <item android:id="@+id/transfer_message"
        android:title="@string/transfer_message"
        android:icon="@drawable/ic_transfer_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="10"/>
</menu>