<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/deleting_your_account_will"
                        android:textColor="@color/colorRedDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/delete_your_account"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/delete_all_your_messages"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/delete_you_from_groups"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="6dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/to_delete_your_account_from_confirm_your_phone_number"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/delete_account_btn"
                        style="@style/ButtonDelete"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:gravity="center"
                        android:text="@string/delete_user_account"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/code"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="+212"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorBlack"
                            android:textSize="17sp" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/numberPhone"
                            style="@style/TextInputEditTextStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edit_text_join"
                            android:hint="@string/number"
                            android:inputType="phone"
                            android:padding="1dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:minHeight="?attr/actionBarSize"
                            android:orientation="horizontal">

                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="40dp"
                                android:layout_weight="1">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/search_input"
                                    style="@style/TextInputEditTextStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:hint="@string/search_"
                                    android:imeOptions="actionSend"
                                    android:inputType="text" />

                                <android.support.v7.widget.AppCompatImageView
                                    android:id="@+id/clear_btn_search_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right|center_vertical"
                                    android:layout_marginRight="6dp"
                                    android:background="@drawable/bg_item_round_ripple"
                                    android:clickable="true"
                                    android:gravity="center"
                                    android:padding="6dp"
                                    android:visibility="visible"
                                    app:srcCompat="@drawable/ic_close_gary_24dp" />
                            </FrameLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@drawable/above_shadow_rect" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/CounrtriesList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:scrollbars="none"
                            tools:listitem="@layout/row_countries" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>