<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/your_current_status"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.rockerhieu.emojicon.EmojiconTextView
                    android:id="@+id/currentStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="16dp"
                    emojicon:emojiconAlignment="baseline"
                    android:text="@string/no_status"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:background="@color/colorGray" />

                <ImageView
                    android:id="@+id/editCurrentStatusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:background="@drawable/bg_item_round_ripple"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_mode_edit_gray_24dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_marginBottom="9dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/select_your_new_status"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/StatusList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@android:color/white"
                android:scrollbars="none"
                tools:listitem="@layout/row_status" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>